tweak image container height to prevent images being cut off
Former-commit-id: 55d26f06d95462ba81b8c6b8b16021d08106b07a

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -48,7 +48,7 @@ li { margin: 0; }
 }
 
 .grid-stack {
-  height: 150px;
+  height: 165px;
  }
 
  img {
